...
        override val icon: ImageVector = Icons.Filled.FitnessCenter,
        override val actionDescription: String = "Add exercise reward"): RewardUIO

    data class Study(
        override val amount: Double,
        override val icon: ImageVector = Icons.Filled.School,
        override val actionDescription: String = "Add study reward"): RewardUIO

    data class Code(
        override val amount: Double,
        override val icon: ImageVector = Icons.Filled.DeveloperMode,
        override val actionDescription: String = "Add coding reward"): RewardUIO

...
