...
    Column(
        modifier = modifier.padding(top = 16.dp),
    ) {
        Balance(
            modifier = Modifier
                .padding(horizontal = 16.dp)
                .semantics { contentDescription = "Current balance" },
            balance = transactions.balance,
        )
        Row(
            Modifier
                .padding(top = 32.dp)
                .horizontalScroll(rememberScrollState())
...
